--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,36 @@
-# Compiled class file
-*.class
+## logs
 
-# Log file
 *.log
+hs_err_pid*
 
-# BlueJ files
-*.ctxt
+## Java
 
-# Mobile Tools for Java (J2ME)
 .mtj.tmp/
-
-# Package Files #
+*.class
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
+*.nar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+## Maven
+
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+pom.xml.bak
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+## IntelliJ
+
+out/
+.idea/
+.idea_modules/
+*.iml
+*.ipr
+*.iws
